# Chunking-Verification-GUI

./: .dockerignore  .env.example  .gitignore  AGENTS.md  Dockerfile  Dockerfile.lite  README.md  TODO.md  database-schema.md  fly.toml  main.py  package-lock.json  process_unstructured.py  pyproject.toml  railpack.json
.claude/: CLAUDE.md
.claude/skills/: pac-update.md  sync-dev.md
chunking_pipeline/: azure_pipeline.py  custom_chunker.py  figure_processor.py  pipeline.py  run_custom_chunker.py
dataset/: gold.jsonl
scripts/: azure-vision-ai-quickstart.py  preview_unstructured_pages.py  run_chunking_pipeline.py
scripts/GraphRAG/: neo4j-graphrag-first-rego.py
web/: config.py  extraction_jobs.py  feedback.py  file_utils.py  serve.py  server.py
web/routes/: __init__.py  chunker.py  chunks.py  extractions.py  feedback.py  images.py  pdfs.py  runs.py
web/static/: app-chunks.js  app-cytoscape.js  app-elements-cards.js  app-elements.js  app-extraction-form.js  app-extraction-jobs.js  app-extraction-preview.js  app-extractions.js  app-feedback.js  app-images-figures.js  app-images-history.js  app-images-pipeline.js  app-images-upload.js  app-images.js  app-lightbox.js  app-metrics.js  app-modal.js  app-overlays.js  app-reviews.js  app-run-form.js  app-run-preview.js  app-runs.js  app-state.js  app-theme.js  app-ui.js  app.js  chunks.css  components.css  drawer.css  images.css  index.html  modal.css  overlays.css  styles.css
