[project]
name = "chunking-tests"
version = "0.1.0"
description = "Document ingestion experiments for local Unstructured processing."
requires-python = ">=3.10"
dependencies = [
    "unstructured",
    "unstructured-inference",
    "pdfminer.six",
    "pypdf",
    "pdf2image",
    "unstructured.pytesseract",
    "python-multipart",
    "pi-heif",
    "fastapi",
    "uvicorn[standard]",
]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = []
